--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,6 +9,7 @@
       name="laundry service"
       content="Doorstep Wash & Dryclean Service"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>React App</title>
   </head>
   <body>
